# brauanlage

./: .tmux.conf  Cargo.toml  README.md  build.rs
proto/: brauanlage.proto
src/: brauanlage.rs  brauanlage_service.rs  control.rs  lib.rs  main.rs
src/brauanlage_service/: service.rs  service_loop.rs
src/control/: control.rs  helper.rs  peripheral.rs  structs.rs
src/temperature_control/: main.rs
