[package]
name = "brauanlage"
version = "0.1.0"
edition = "2021"
author = "jehov4"
repository = "https://github.com/jehov4/brauanlage"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.9"
prost = "0.11"
futures-core = "0.3"
futures-util = "0.3"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-stream = { version = "0.1", features = ["sync"] }

async-stream = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.7"
itertools = "0.11.0"
rppal = "0.14.1"

[build-dependencies]
tonic-build = "0.9"
